syntax = "proto3";
package pb;
option go_package = "./pb";

import "exp.proto";

enum EnumOauthT {
    OauthTNone = 0;
    OauthTUsername = 1;
    OauthTPhone = 2;
    OauthTEmail = 3;
}

message Grid {
    int32 ID = 1;
    int32 X = 2;
    int32 Y = 3;
}

message TableOauth {
    string Pk = 1;
    string Sk = 2;
    string Gsi1Pk = 3;
    string Gsi1Sk = 6;
    int32 CreatedAt = 4;
    int64 Version = 5;
    EnumOauthT T = 7;
}

message TableUser {
    string Pk = 1;
    string Sk = 2;
    int64 UserID = 3;
    int32 CreatedAt = 4;
    int32 DeletedAt = 5;
    int32 LastLoginAt = 6;
    map<string, int32> Plunder = 7;
    map<string, Grid> Maps = 8;
    int64 Version = 9;
    string Gsi1Pk = 10;
    string Gsi1Sk = 11;
}

message UserInfo {
    int32 DeletedAt = 5;
    int32 LastLoginAt = 6;
    map<string, int32> Plunder = 7;
    map<string, Grid> Maps = 8;
    int64 Version = 9;
}
  
message ReqRegister {
    int64 Username = 1;
    EnumOauthT T = 7;
}

message ResRegister {
    UserInfo UserInfo = 2;
}

message ReqUpdateUserInfo {
    UserInfo UserInfo = 1;
    repeated ExpUpdateItem ExpUpdateItems = 2;
    repeated ExpCondition ExpConditions = 3;
}
  