syntax = "proto3";
package pb;
option go_package = "./pb";

enum EnumExpUpdateOperationMode {
    OperationModeNone = 0;
    OperationModeAdd = 1;
    OperationModeSet = 2;
    OperationModeRemove = 3;
    OperationModeDelete = 4;
}

// setValueMode https://github.com/aws/aws-sdk-go-v2/blob/main/feature/dynamodb/expression/operand.go
// set value use special way
enum EnumExpUpdateSetValMode {
    SetValModeNone = 0;
    SetValModePlus = 1;
    SetValModeMinus = 2;
    SetValModeListAppend = 3;
    SetValModeIfNotExists = 4;
}

message ExpUpdateSet {
    string Name = 1;
    EnumExpUpdateSetValMode SetValMode = 2;
}

message ExpUpdateItem {
    EnumExpUpdateOperationMode OperationMode = 1;
    repeated ExpUpdateSet ExpUpdateSets = 2;
}